[package]
name = "sightingdb"
version = "0.0.1"
authors = ["Sebastien Tricaud <sebastien.tricaud@devo.com>"]
edition = "2018"

[[bin]]
name = "sighting-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "sighting"
path = "src/client/main.rs"

[dependencies]
dirs = "1.0"
rustyline = "5.0.0"
regex = "1"

reqwest = "0.9.18"
#shio = "0.3.0"
rouille = "3.0.0"
daemonize = "0.4.1"

serde = "1.0.94"
serde_json = "1.0.39"

ansi_term = "0.9"
atomicwrites = "0.2.3"
base64 = "0.10.1"
#protobuf = "2.6.2"

rust-ini = "0.13.0"

# [dependencies.clap]
# version = "2.33.0"
# features = ["yaml"]
