[package]
name = "sightingdb"
version = "0.0.1"
authors = ["Sebastien Tricaud <sebastien.tricaud@devo.com>"]
edition = "2018"

[[bin]]
name = "b64"
path = "src/b64/main.rs"

[[bin]]
name = "sighting-daemon"
path = "src/daemon/main.rs"

[[bin]]
name = "sighting"
path = "src/client/main.rs"

[dependencies]
dirs = "1.0"
rustyline = "5.0.0"
regex = "1"

reqwest = "0.9.18"
#shio = "0.3.0"
daemonize = "0.4.1"

serde = "1.0.94"
serde_json = "1.0.39"

ansi_term = "0.9"
atomicwrites = "0.2.3"
#protobuf = "2.6.2"

rust-ini = "0.13.0"
openssl = "0.10.23"
base64 = "0.10.1"
#memory-balloon = "0.1.0"
clap = "2.33.0"

[dependencies.chrono]
version = "0.4.7"
features = ["serde"]

[dependencies.actix-web]
version = "1.0.0"
features = ["ssl"]
